anyway my eyes are so sore today ...

--- a/scripts/R27_sub_groups_of_sweets.Rmd
+++ b/scripts/R27_sub_groups_of_sweets.Rmd
@@ -795,61 +795,84 @@ code_to_desc <- bind_rows(
   tibble(code = '9', desc = "Sugars, Sweets, and Beverages")
 ) %>%
   distinct() %>%
+  # Clean up the descriptions for better readability
+  mutate(
+    desc = str_replace_all(desc, "_", " "),
+    desc = str_replace(desc, "sugarsugar", "sugar"),
+    desc = str_replace(desc, "energy drinks sport.+$", "etc.")
+  ) %>%
   mutate(label = paste(code, desc, sep = ": "))
 
-# Function to recursively build the Newick string
-build_newick <- function(parent_code, data, all_data) {
-  children <- data %>% filter(f2_code == parent_code)
-  if (nrow(children) == 0) {
-    return(as.character(parent_code))
-  }
+```
+```{r}
+# Create the node data, starting with the tips (level 3)
+nodes_l3 <- fndds_structure_table %>%
+  distinct(code = f3_code, parent = f2_code) %>%
+  arrange(parent, code) %>%
+  mutate(y = row_number(), x = 3)
+
+# Calculate positions for level 2 nodes by centering them over their children
+nodes_l2 <- nodes_l3 %>%
+  group_by(parent) %>%
+  summarise(y = mean(y)) %>%
+  rename(code = parent) %>%
+  mutate(x = 2, parent = '9') %>% select(colnames(nodes_l3))
+
+# Calculate position for the root node (level 1) by centering it over its children
+nodes_l1 <- nodes_l2 %>%
+  summarise(y = mean(y)) %>%
+  mutate(x = 1, code = '9', parent = NA)%>% select(colnames(nodes_l3))
+
+# Combine all nodes into one dataframe
+all_nodes <- bind_rows(nodes_l1, nodes_l2, nodes_l3) %>%
+  mutate(across(c(code, parent), as.character)) %>%
+  left_join(select(code_to_desc, code, label), by = c("code" = "code"))
+
+# --- Step 3: Create the Edge Dataframe for Drawing Lines ---
+# This creates the vertical and horizontal lines for the tree structure.
+edges <- all_nodes %>%
+  filter(!is.na(parent)) %>%
+  left_join(all_nodes, by = c("parent" = "code"), suffix = c("_child", "_parent")) %>%
+  select(x = x_child, y = y_child, xend = x_parent, yend = y_parent)
+
+# --- Step 4: Create the Final Tree Diagram with ggplot2 ---
+ggplot() +
+  # Draw the horizontal segments of the tree
+  geom_segment(data = edges, aes(x = x, y = y, xend = xend + 0.05, yend = y), color = "gray50") +
+  # Draw the vertical segments of the tree
+  geom_segment(data = edges, aes(x = xend + 0.05, y = y, xend = xend + 0.05, yend = yend), color = "gray50") +
+
+  # Draw the points for each node
+  geom_point(data = all_nodes, aes(x = x, y = y, color = factor(x)), size = 4) +
   
-  child_strings <- children$f3_code %>%
-    map_chr(~ as.character(.x))
+  # Draw the text labels, now rotated vertically
+  geom_text(
+    data = all_nodes,
+    aes(x = x, y = y, label = label),
+    angle = 0, # Rotate labels 90 degrees
+    vjust = -0.7, # Adjust vertical justification to move text above the point
+    hjust = 0.5,  # Center text horizontally
+    size = 3,
+    fontface = "bold"
+  ) +
   
-  paste0("(", paste(child_strings, collapse = ","), ")", parent_code)
-}
-
-# Build the tree structure for each level 2 group
-level2_groups <- fndds_structure_table %>% distinct(f2_code) %>% pull()
-level2_newick <- map_chr(level2_groups, ~build_newick(.x, fndds_structure_table))
-
-# Combine into the final Newick string with the root node "9"
-final_newick_string <- paste0("(", paste(level2_newick, collapse = ","), ")9;")
-
-# --- Step 3: Create a 'phylo' Object and Plot with ggtree ---
-# The 'read.tree' function from the 'ape' package parses the Newick string.
-tree <- read.tree(text = final_newick_string)
-
-# --- Step 4: Create an Annotation Data Frame ---
-# This data frame will map the node/tip labels (which are just numbers/codes)
-# to the full descriptive labels we want to plot.
-annotation_df <- as_tibble(tree) %>% # Convert the tree structure to a table to get node numbers
-  select(node, label) %>% # We only need the node number and its original label (the code)
-  left_join(code_to_desc, by = c("label" = "code")) %>% # Join with our descriptions
-  # The final label is in the 'label.y' column from the join.
-  # We also handle the root node which might not have a label from the join.
-  mutate(full_label = coalesce(label.y, label)) %>%
-  select(node, full_label) # Keep the node number and the final descriptive label
-
-
-# --- Step 5: Create the Tree Visualization ---
-# The '%<+%' operator joins our annotation data to the tree plot data.
-ggtree(tree, layout = 'rectangular') %<+% annotation_df +
-  # Add labels to the tips and internal nodes of the tree.
-  # 'label=full_label' now works because 'full_label' is in the joined data.
-  # geom_label2 is a ggtree function that is often more flexible for tree labels.
-  geom_label2(aes(label = full_label, subset = !is.na(full_label)), 
-              hjust = -0.05, 
-              label.size = 0, 
-              alpha = 0.6, 
-              fill = "skyblue") +
-  # Add some space on the x-axis for the labels
-  xlim(0, 4) +
+  # Define custom colors for each level of the hierarchy
+  scale_color_manual(values = c("1" = "#073B4C", "2" = "#118AB2", "3" = "#06D6A0"), guide = "none") +
+  
+  # Reverse the y-axis to have the root at the top and expand x-axis for labels
+  scale_y_reverse() +
+  scale_x_continuous(limits = c(0.8, 3.5)) +
+  
+  # Use a minimal theme to remove axes and grids
+  theme_void() +
+  
   # Add a title
   labs(title = "FNDDS Hierarchy for Sugars, Sweets, and Beverages") +
-  theme(plot.title = element_text(hjust = 0.5, size = 16, face = "bold"))
+  theme(
+    plot.title = element_text(hjust = 0.5, size = 16, face = "bold", margin = margin(b = 20))
+  )
 
 
+ggsave('../data/R27_g9_tree.pdf', width = 12)
 ```
 
